--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -22,10 +22,35 @@
     @include all-below-med{
         align-items: center !important;
     }
+    // .logo-wrap{
+    //     @include all-below-mobile-lg{
+    //         position: fixed;
+    //         width: 230px;
+    //         margin: 0 auto;
+    //         left: 0;
+    //         right: 0;
+    //         top: 0;
+    //         z-index: 99;
+    //     }
+    // }
     .site-logo {
+        @include all-below-med{
+            height: 85px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        img{
+            @include all-below-mobile-lg{
+                max-width: 190px;  
+            }
+        }
         &.m-height{
             img {
                 max-height: 55px;
+                @include all-below-mobile-lg{
+                    max-height: 45px;
+                }
             }
         }
     }
@@ -61,6 +86,7 @@
             @extend %basetransition2;
             @include all-below-med{
                 width: 46px;
+                margin-top: 2px;
             }
             &:hover {
                 @extend %secondary-bg-color;
@@ -80,6 +106,9 @@
                 @extend %borderradius50;
                 border: 2px solid #fff;
                 @extend %basetransition2;
+                @include all-below-mobile-lg{
+                    border: 4px solid;
+                }
                 &.change-color{
                     @extend %primary-bg-color;
                     &:hover{
@@ -249,90 +278,87 @@
 
 /* =======slicknav_menu======== */
 .slicknav_menu {
-    @extend %displaynone;
-    @include all-below-med(){
-        display: block;
-        background: #ddd;
-        position: fixed;
-        left: 0;
-        top: -10px;
-        right: 0;
-        width: 720px;
-        z-index: 999999999999;
-        margin: 0 auto;
-        height: 0;
-        span.slicknav_menutxt {
-            display: none;
+    @include desktops{
+        display: none;
+    }
+    @extend %margin0auto;
+    @extend %posfixed;
+    background: #ddd;
+    left: 0;
+    top: -10px;
+    right: 0;
+    width: 720px;
+    z-index: 999999999999;
+    height: 0;
+    span.slicknav_menutxt {
+        @extend %displaynone;
+    }
+    .slicknav_btn {
+        padding: 0;
+        margin: 0px 11px 0 0;
+        font-size: 30px;
+        background: none;
+        top: 35px;
+        right: 15px;
+        @include mobile-lg{
+            margin: 0px -5px 0 0;
         }
-        .slicknav_btn {
-            padding: 0;
-            margin: 0px 11px 0 0;
-            font-size: 30px;
+        @include all-below-mobile-lg{
+            // top: 34px;
+            // right: 0;
+        }
+        &:hover{
             background: none;
-            top: 35px;
-            right: 15px;
-            @include mobile-lg{
-                margin: 0px -5px 0 0;
-            }
-            @include all-below-mobile-lg{
-                // top: 34px;
-                // right: 0;
-            }
-            &:hover{
-                background: none;
-            }
-            // @include mx-mobile(){
-            //     right: 0px;
-            // };
-            // @include mx-mobile-lg(){
-            //     right: 63px;
-            // };
         }
-        .slicknav_icon {
-            margin: 0;
-            span {
-                background-color: #333333;
-                border-radius: 0px;
-                box-shadow: none;
-            }
+        // @include mx-mobile(){
+        //     right: 0px;
+        // };
+        // @include mx-mobile-lg(){
+        //     right: 63px;
+        // };
+    }
+    .slicknav_icon {
+        margin: 0;
+        span {
+            @extend %primary-bg-color;
+            @extend %borderradius0;
+            box-shadow: none;
         }
-        .slicknav_nav {
-            padding: 10px 0;
-            background: #fff;
-            position: absolute;
-            left: 0;
-            top: 95px;
-            width: 100%;
-            // box-shadow: 0px 3px 8px -7px #000;
-            box-shadow:2px 10px 30px -14px #000;
-            @include all-below-mobile-lg{
-                // top: 90px;
-            }
-            .slicknav_row {
-                padding: 0;
-                a{
-                    padding: 10px 15px;
-                    display: inline-block;
-                }
-            }
-            .slicknav_row{
-                border-radius: 0px;
-                &:hover {
-                    border-radius: 0px;
-                }
+    }
+    .slicknav_nav {
+        padding: 10px 0;
+        background: #fff;
+        @extend %posabsolute;
+        left: 0;
+        top: 95px;
+        width: 100%;
+        // box-shadow: 0px 3px 8px -7px #000;
+        box-shadow:2px 10px 30px -14px #000;
+        @include all-below-mobile-lg{
+            // top: 90px;
+        }
+        .slicknav_row {
+            padding: 0;
+            a{
+                padding: 10px 15px;
+                @extend %displayinline;
             }
         }
-        a {
-            padding: 10px 15px;
-            font-size: 16px;
-            color: #000;
-            border-radius: 0;
+        .slicknav_row{
+            @extend %borderradius0;
             &:hover {
-                border-radius: 0;
+                @extend %borderradius0;
             }
         }
-        
-        
+    }
+    a {
+        padding: 10px 15px;
+        font-size: 16px;
+        color: #000;
+        @extend %borderradius0;
+        &:hover {
+            @extend %borderradius0;
+        }
     }
     @include all-below-mobile-lg(){
         width: 540px;
