--- a/scss/pages/_cardetails.scss
+++ b/scss/pages/_cardetails.scss
@@ -30,25 +30,38 @@
     background-color: #F0F8FF;
     border-radius: 5px;
     padding: 15px;
+    // .slick-slider-wrap
     .slick-slider-wrap{
-        width: 630px;
+        width: 610px;
         position: relative;
-        .slider-nav-thumbnails {
-            width: 100px;
-            position: absolute;
-            right: 0;
-            top: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 409px;
-        }
+        height: 405px;
         .slider {
-            width: 500px;
+            width: 490px;
+            height: 405px;
         }
-        .slider .slick-slide {
+        .slider-nav-thumbnails {
+            // background: red;
+            width: 110px;
+            margin-left: 10px;
+            height: 405px;
+            // position: absolute;
+            // right: 0;
+            // top: 0;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: center;
+            // height: 409px;
+            .arrow-left{
+                margin-bottom: -5px;
+            }
+            .arrow-right{
+                margin-top: -5px;
+            }
+        }
+        .slick-vertical .slick-slide {
             border: 0;
+            margin: 4px 0;
         }
         .slick-arrow {
             background-color: #094372;
@@ -62,56 +75,98 @@
             display: block;
         }
     }
+    // .car-details
     .car-details{
-        width: 450px;
-        .car-title h3 {
-            font-size: 21px;
-            margin-bottom: 3px;
-            text-transform: uppercase;
-        }
-        
+        width: 470px;
+        padding-left: 20px;
         .car-title {
             color: #094372;
             font-weight: 300;
             border-bottom: 1px solid #B8BFC4;
+            h3 {
+                font-size: 21px;
+                margin-bottom: 3px;
+                text-transform: uppercase;
+            }
         }
-        
         .car-text {
             color: #707070;
-            /* font-size: 15px; */
+            h4 {
+                font-size: 19px;
+                font-weight: 500;
+                margin-bottom: 10px;
+                color: #000;
+            }
         }
-        
-        .car-text h4 {
-            font-size: 19px;
-            font-weight: 500;
-            margin-bottom: 10px;
-            color: #000;
+        .price-per-month{
+            .price-wrap {
+                width: 310px;
+                background-color: #fff;
+                padding: 14px 18px;
+                color: #707070;
+                font-size: 14px;
+                text-transform: uppercase;
+                border-radius: 5px;
+                .car-price {
+                    color: #094372;
+                    font-size: 30px;
+                    font-weight: 700;
+                    display: block;
+                    line-height: 34px;
+                }
+                .monthly-cost {
+                    color: #E86E1C;
+                    font-weight: 600;
+                    font-size: 18px;
+                    margin: 0 10px;
+                }
+            }
         }
-        
-        .price-wrap {
-            width: 310px;
-            background-color: #fff;
-            padding: 14px 18px;
-            color: #707070;
-            font-size: 14px;
-            text-transform: uppercase;
-            border-radius: 5px;
-            /* line-height: 28px; */
+        .details-btns {
+            .boxed-btn {
+                width: 170px;
+                &.enquire-btn {
+                    background-color: #094372;
+                    margin-left: 15px;
+                    &:hover {
+                        border-color: #094372;
+                        background: transparent;
+                        color: #094372;
+                    }
+                }
+            }
         }
-        
-        .price-wrap .car-price {
-            color: #094372;
-            font-size: 30px;
-            font-weight: 700;
-            display: block;
-            line-height: 34px;
+    }
+    .car-details-bottom{
+        margin-top: 25px;
+        .car-details-features {
+            .single-car-details-feature {
+                margin-left: 40px;
+                font-size: 13px;
+                text-transform: uppercase;
+                color: #000000;
+                .dfeature-icon {
+                    margin-bottom: 5px;
+                }
+            }
         }
-        
-        .price-wrap .monthly-cost {
-            color: #E86E1C;
-            font-weight: 600;
-            font-size: 18px;
-            margin: 0 10px;
+        .share-section {
+            a {
+                background-color: #094372;
+                color: #fff;
+                font-size: 13px;
+                text-transform: uppercase;
+                padding: 10px 20px;
+                border-radius: 5px;
+                margin-right: 8px;
+                transition: .5s;
+                &:hover {
+                    background-color: #E86E1C;
+                }
+                i {
+                    margin-right: 5px;
+                }
+            }
         }
     }
 }
@@ -130,4 +185,280 @@
     // img {
     //     margin: 0 0 1.5rem;
     // }
+}
+
+// .reserve-area
+.reserve-area {
+    padding: 45px 0 50px;
+    .reserve-content {
+        background: #E86E1C;
+        color: #fff;
+        border-radius: 5px;
+        padding: 27px 30px;
+        .single-reserve-item {
+            width: 320px;
+            h3 {
+                font-weight: 300;
+                font-size: 24px;
+                margin: 0;
+                strong {
+                    font-weight: 700;
+                    display: block;
+                }
+            }
+            &.reserve-one {
+                span {
+                    margin-right: 10px;
+                }
+                .laptop {
+                    width: 70px;
+                    height: 45px;
+                    background: #052844;
+                    text-align: center;
+                    border-radius: 5px;
+                    border: 2px solid #fff;
+                    line-height: 42px;
+                    position: relative;
+                }
+                .laptop:after {
+                    position: absolute;
+                    left: -6px;
+                    bottom: -7px;
+                    width: 117%;
+                    height: 3px;
+                    background: #fff;
+                    content: "";
+                }
+            }
+            &.reserve-two {
+                width: 430px;
+                .single-step {
+                    text-align: center;
+                    font-size: 15px;
+                    text-transform: uppercase;
+                    position: relative;
+                    &:after {
+                        position: absolute;
+                        right: -88%;
+                        top: 50%;
+                        font-family: fontawesome;
+                        color: #fff;
+                        content: "\f0da";
+                        font-size: 30px;
+                        margin-top: -22px;
+                    }
+                    &:last-child:after {
+                        content: "";
+                    }
+                    .step-one {
+                        width: 70px;
+                        height: 70px;
+                        border: 2px solid #fff;
+                        border-radius: 50%;
+                        display: block;
+                        line-height: 65px;
+                        background: #052844;
+                        font-size: 30px;
+                        margin: 1px 0;
+                    }
+                }
+            }
+            &.reserve-three {
+                width: 300px;
+                .boxed-btn {
+                    background: #052844;
+                    &:hover {
+                        border-color: #052844;
+                        background: transparent;
+                        color: #052844;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+// .submenu-area
+.submenu-area {
+    padding-bottom: 55px;
+    ul {
+        text-align: center;
+        border-bottom: 6px solid #094372;
+        li {
+            display: inline-block;
+            position: relative;
+            a {
+                color: #094372;
+                text-transform: uppercase;
+                font-weight: 600;
+                font-size: 16px;
+                padding: 24px 60px;
+                
+            }
+            &.active{
+                &:after {
+                    position: absolute;
+                    content: "";
+                    width: 100%;
+                    background: #E76E1C;
+                    left: 0;
+                    bottom: -6px;
+                    height: 6px;
+                }
+                &:before {
+                    position: absolute;
+                    content: "";
+                    border-top: 10px solid #E86E1C;
+                    border-right: 10px solid transparent;
+                    border-left: 10px solid transparent;
+                    left: 50%;
+                    bottom: -16px;
+                    margin-left: -10px;
+                }
+            }
+        }
+    }
+}
+
+
+.sticky-wrapper.is-sticky .submenu-area {
+    top: 70px !important;
+    z-index: 99 !important;
+    background: #fff;
+    padding-bottom: 0;
+    background: #F0F8FF;
+    border-bottom: 6px solid #094372;
+}
+.sticky-wrapper.is-sticky .submenu-area ul {
+    border: 0;
+}
+.sticky-wrapper.is-sticky .submenu-area ul li a {
+    padding: 18px 60px;
+}
+
+
+
+// specification-area
+.specification-area{
+    padding: 0 0 40px;
+    .table-content-wrap {
+        .section-title {
+            margin-bottom: 45px;
+        }
+        .single-table-item {
+            border: 1px solid #C2D4E3;
+            margin-bottom: 23px;
+            .table-header {
+                border-bottom: 1px solid #C2D4E3;
+                padding: 10px 18px;
+                color: #094372;
+                font-weight: 700;
+                text-transform: uppercase;
+                font-size: 18px;
+                background: #F0F8FF;
+                height: 60px;
+                .head-icon {
+                    display: inline-block;
+                    border-right: 4px solid #094372;
+                    padding-right: 15px;
+                    margin-right: 10px;
+                }
+            }
+            .table-striped {
+                tbody tr{
+                    &:nth-of-type(odd) {
+                        background: #F0F8FF;
+                    }
+                    &:nth-of-type(even) {
+                        background: #F8FCFF;
+                    }
+                }
+            }
+            .table {
+                margin: 0;
+                tr {
+                    td {
+                        border: 0;
+                        font-size: 14px;
+                        text-transform: uppercase;
+                        font-weight: 500;
+                        padding: 8px 20px;
+                        &:nth-child(1) {
+                            color: #000000;
+                        }
+                        &:nth-child(2) {
+                            color: #094372;
+                        }
+                    }
+                    &:nth-child(1) {
+                        td {
+                            padding-top: 15px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .specification-bottom-text {
+        padding: 30px 30px;
+        color: #707070;
+        box-shadow: 0 0px 20px -13px #000;
+        border-radius: 5px;
+        background: #fff;
+        margin-top: 10px;
+    }
+}
+
+
+// .testimonial-area
+.testimonial-area {
+    padding: 40px 0 70px;
+}
+
+.testimonial-area .section-title {
+    margin-bottom: 40px;
+}
+
+.testimonial-quote {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    border: 1px solid #E0EFFC;
+    color: #C0C6CC;
+    font-size: 50px;
+    line-height: 130px;
+    margin: 0 auto;
+    background-color: #F0F8FF;
+    margin-bottom: 30px;
+    box-shadow: 0 0px 27px -20px #094372;
+}
+
+.single-testimonial-item h4 {
+    color: #094372;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+
+.single-testimonial-item {
+    color: #094372;
+    font-weight: 300;
+    .stars {
+        margin-top: 40px;
+    }
+}
+
+
+
+.testimonial-area .owl-nav div {
+    left: -119px;
+    opacity: .7;
+}
+
+.testimonial-area .owl-nav div.owl-next {
+    left: auto;
+    right: -119px;
 }
