--- a/scss/pages/_cardetails.scss
+++ b/scss/pages/_cardetails.scss
@@ -34,41 +34,47 @@
     .slick-slider-wrap{
         width: 610px;
         position: relative;
-        height: 405px;
+        // max-height: 401px;
+        // background: green;
+        // height: 405px;
         .slider {
             width: 490px;
-            height: 405px;
+            // height: 405px;
         }
         .slider-nav-thumbnails {
             // background: red;
             width: 110px;
             margin-left: 10px;
-            height: 405px;
-            // position: absolute;
-            // right: 0;
-            // top: 0;
-            // display: flex;
-            // flex-direction: column;
-            // align-items: center;
-            // justify-content: center;
-            // height: 409px;
+            // height: 401px;
             .arrow-left{
-                margin-bottom: -5px;
+                // margin-bottom: -5px;
+                top: 0px;
+                position: relative;
             }
             .arrow-right{
+                // margin-top: -5px;
+                bottom: 0;
+                position: relative;
+            }
+            .slick-slide {
+                border: 0;
+                margin: 4px 0;
+            }
+            .slick-list {
                 margin-top: -5px;
+                margin-bottom: -4px;
             }
         }
         .slick-vertical .slick-slide {
             border: 0;
-            margin: 4px 0;
+            // margin: 4px 0;
         }
         .slick-arrow {
             background-color: #094372;
             width: 100%;
             text-align: center;
             color: #fff;
-            height: 25px;
+            height: 26px;
             line-height: 25px;
             font-size: 20px;
             cursor: pointer;
@@ -170,21 +176,27 @@
         }
     }
 }
-//.product-slider photo overlap issue
+// .product-slider photo overlap issue
 .slider, .slider-nav-thumbnails{
-    visibility: hidden;
-    opacity: 1;	 
+    @extend %invisible;	 
     transition: opacity 0.1s;
     &.slick-initialized{
-        visibility: visible;
-        .single-item{
-            display: block;
-            visibility: visible !important;
-         }
+        @extend %visible;
+        .single-car-item{
+            @extend %displayblock;
+            visibility:visible !important;
+        }
     }
-    // img {
-    //     margin: 0 0 1.5rem;
-    // }
+    .single-car-item{
+        @extend %displaynone;
+        img{
+            @extend %w100;
+        }
+        &:nth-child(1){
+            @extend %displayblock;
+            // visibility:hidden;
+        }
+    }
 }
 
 // .reserve-area
@@ -278,8 +290,9 @@
     }
 }
 
-
-
+// body {
+//     position: relative;
+//   }
 
 // .submenu-area
 .submenu-area {
@@ -287,18 +300,11 @@
     ul {
         text-align: center;
         border-bottom: 6px solid #094372;
+        position: relative;
         li {
             display: inline-block;
             position: relative;
-            a {
-                color: #094372;
-                text-transform: uppercase;
-                font-weight: 600;
-                font-size: 16px;
-                padding: 24px 60px;
-                
-            }
-            &.active{
+            &.list-one{
                 &:after {
                     position: absolute;
                     content: "";
@@ -319,27 +325,61 @@
                     margin-left: -10px;
                 }
             }
+            a.nav-link {
+                color: #094372;
+                text-transform: uppercase;
+                font-weight: 600;
+                font-size: 16px;
+                padding: 24px 60px;
+                position: relative;
+                &.active{
+                    &:after {
+                        position: absolute;
+                        content: "";
+                        width: 100%;
+                        background: #E76E1C;
+                        left: 0;
+                        bottom: -6px;
+                        height: 6px;
+                    }
+                    &:before {
+                        position: absolute;
+                        content: "";
+                        border-top: 10px solid #E86E1C;
+                        border-right: 10px solid transparent;
+                        border-left: 10px solid transparent;
+                        left: 50%;
+                        bottom: -16px;
+                        margin-left: -10px;
+                    }
+                }
+            }
         }
     }
 }
-
-
-.sticky-wrapper.is-sticky .submenu-area {
-    top: 70px !important;
-    z-index: 99 !important;
-    background: #fff;
-    padding-bottom: 0;
-    background: #F0F8FF;
-    border-bottom: 6px solid #094372;
+.sticky-wrapper.is-sticky {
+    .submenu-area {
+        top: 70px !important;
+        z-index: 99 !important;
+        background: #fff;
+        padding-bottom: 0;
+        background: #F0F8FF;
+        border-bottom: 6px solid #094372;
+        ul {
+            border: 0;
+            li {
+                a {
+                    padding: 18px 60px;
+                }
+                &.list-one{
+                    &:before, &:after{
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
-.sticky-wrapper.is-sticky .submenu-area ul {
-    border: 0;
-}
-.sticky-wrapper.is-sticky .submenu-area ul li a {
-    padding: 18px 60px;
-}
-
-
 
 // specification-area
 .specification-area{
