--- a/scss/pages/_finance.scss
+++ b/scss/pages/_finance.scss
@@ -18,6 +18,7 @@
         color: #707070;
         margin-bottom: 65px;
     }
+    // .finance-calculator-section
     .finance-calculator-section {
         background: #094372;
         padding: 27px 0 24px;
@@ -46,278 +47,230 @@
             margin-top: 20px;
         }
     }
-
-
-
+    // .finance-table-section 
     .finance-table-section {
         background-color: #F0F8FF;
         padding: 35px 0 70px;
-    }
-    
-    .finance-table-wrap {
-        border: 1px solid #C2D4E3;
-        background: #fff;
-        .table-striped {
-            tbody tr{
-                &:nth-of-type(odd) {
-                    background: #ffffff;
-                }
-                &:nth-of-type(even) {
-                    background: #F2F5F8;
-                }
-            }
-        }
-        .table {
-            margin: 0;
-            tr {
-                td {
-                    border: 0;
+        .finance-table-wrap {
+            border: 1px solid #C2D4E3;
+            background: #fff;
+            // .finance-table-header
+            .finance-table-header {
+                padding: 10px 18px;
+                border-bottom: 1px solid #C2D4E3;
+                .table-header-left {
                     font-size: 14px;
                     text-transform: uppercase;
-                    font-weight: 500;
-                    padding: 8px 20px;
-                    &:nth-child(1) {
+                    color: #585858;
+                    h4 {
+                        font-size: 16px;
                         color: #094372;
+                        margin: 0;
                     }
-                    &:nth-child(2) {
-                        color: #000000;
+                    .table-header-text {
+                        border-left: 4px solid #094372;
+                        margin-left: 10px;
+                        padding-left: 10px;
+                    }
+                    .cs-tag {
+                        background-color: #094372;
+                        color: #fff;
+                        text-align: center;
+                        display: block;
+                        line-height: 38px;
+                        text-transform: uppercase;
+                        font-weight: 700;
+                        font-size: 18px;
+                        padding: 0px 8px;
                     }
                 }
-                &:nth-child(1) {
+                .table-header-right {
+                    color: #094372;
+                    text-transform: uppercase;
+                    font-weight: 700;
+                    font-size: 14px;
+                    i {
+                        width: 16px;
+                        height: 16px;
+                        background: #E86E1C;
+                        color: #fff;
+                        text-align: center;
+                        border-radius: 50px;
+                        line-height: 16px;
+                        padding-left: 2px;
+                    }
+                }
+                
+            }
+            // .table-striped
+            .table-striped {
+                tbody tr{
+                    &:nth-of-type(odd) {
+                        background: #ffffff;
+                    }
+                    &:nth-of-type(even) {
+                        background: #F2F5F8;
+                    }
+                }
+            }
+            .table {
+                margin: 0;
+                tr {
                     td {
-                        padding-top: 15px;
+                        border: 0;
+                        font-size: 14px;
+                        text-transform: uppercase;
+                        font-weight: 500;
+                        padding: 8px 20px;
+                        &:nth-child(1) {
+                            color: #094372;
+                        }
+                        &:nth-child(2) {
+                            color: #000000;
+                        }
+                        .info-icon {
+                            border-color: #094372;
+                            color: #094372;
+                        }
+                    }
+                    &:nth-child(1) {
+                        td {
+                            padding-top: 15px;
+                        }
+                    }
+                }
+            }
+            // .finance-video-section
+            .finance-video-section {
+                padding: 35px 20px 26px 20px;
+                .boxed-btn {
+                    width: 100%;
+                    padding: 14px 22px;
+                    margin-bottom: 15px;
+                    i {
+                        font-size: 25px;
+                        margin-right: 3px;
+                        position: relative;
+                        bottom: -3px;
+                    }
+                }
+                h5 {
+                    font-size: 16px;
+                    text-transform: uppercase;
+                    margin-bottom: 25px;
+                }
+                .finance-video-wrap{
+                    border: 1px solid #C7C7C7;
+                    padding: 10px;
+                    .finance-video {
+                        background-size: cover;
+                        background-position: center;
+                        background-color: #ddd;
+                        height: 300px;
+                        position: relative;
+                        a {
+                            width: 130px;
+                            height: 130px;
+                            background-color: #00000080;
+                            display: block;
+                            text-align: center;
+                            color: #ffffff90;
+                            border-radius: 50%;
+                            font-size: 40px;
+                            line-height: 129px;
+                            padding-left: 10px;
+                            position: absolute;
+                            left: 0;
+                            top: 50%;
+                            right: 0;
+                            margin: 0 auto;
+                            margin-top: -65px;
+                            transition: .5s;
+                            border: 4px solid #ffffff30;
+                            &:hover {
+                                background-color: #094372;
+                                border-color: #fff;
+                                color: #fff;
+                            }
+                        }
+                    }
+                }
+                .video-footer {
+                    margin-top: 20px;
+                    a {
+                        color: #094372;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                        transition: .3s;
+                        &:hover{
+                            @extend %secondary-color;
+                        }
+                        i {
+                            margin-right: 3px;
+                        }
                     }
                 }
             }
         }
     }
-    
-    .cs-tag {
-        /* height: 38px; */
-        background-color: #094372;
-        color: #fff;
-        /* border-right: 4px solid #094372; */
-        /* margin-right: 10px; */
-        text-align: center;
-        display: block;
-        line-height: 38px;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 18px;
-        padding: 0px 8px;
-    }
-    
-    .finance-table-header h4 {
-        font-size: 16px;
-        color: #094372;
-        margin: 0;
-    }
-    
-    .table-header-left {
-        font-size: 14px;
-        text-transform: uppercase;
-        color: #585858;
-    }
-    
-    .finance-table-header {
-        padding: 10px 18px;
-        border-bottom: 1px solid #C2D4E3;
-    }
-    .table-header-text {
-        border-left: 4px solid #094372;
-        margin-left: 10px;
-        padding-left: 10px;
-    }
-    .table-header-right {
-        color: #094372;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 14px;
-    }
-    
-    .table-header-right i {
-        width: 16px;
-        height: 16px;
-        background: #E86E1C;
-        color: #fff;
-        text-align: center;
-        border-radius: 50px;
-        line-height: 16px;
-        padding-left: 2px;
-    }
-
-
-    .finance-video-section {
-        padding: 35px 20px 26px 20px;
-    }
-    
-    .finance-video-section .boxed-btn {
-        width: 100%;
-        /* height: 60px; */
-        padding: 14px 22px;
-        margin-bottom: 15px;
-    }
-    
-    .finance-video-section .boxed-btn i {
-        font-size: 25px;
-        margin-right: 3px;
-        position: relative;
-        bottom: -3px;
-    }
-    
-    .finance-video-section h5 {
-        font-size: 16px;
-        text-transform: uppercase;
-        margin-bottom: 25px;
-    }
-    
-    .finance-video {
-        background-size: cover;
-        background-position: center;
-        background-color: #ddd;
-        height: 300px;
-        position: relative;
-    }
-    
-    .finance-video a {
-        width: 130px;
-        height: 130px;
-        background-color: #00000080;
-        display: block;
-        text-align: center;
-        color: #ffffff90;
-        border-radius: 50%;
-        font-size: 40px;
-        line-height: 129px;
-        padding-left: 10px;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        right: 0;
-        margin: 0 auto;
-        margin-top: -65px;
-        transition: .5s;
-        border: 4px solid #ffffff30;
-    }
-    
-    .finance-video a:hover {
-        background-color: #094372;
-        border-color: #fff;
-        color: #fff;
-    }
-    
-    .finance-video-wrap {
-        border: 1px solid #C7C7C7;
-        padding: 10px;
-    }
-    
-    .video-footer a {
-        color: #094372;
-        text-transform: uppercase;
-        font-weight: 600;
-    }
-    
-    .video-footer a i {
-        margin-right: 3px;
-    }
-    
-    .video-footer {
-        margin-top: 20px;
-    }
-    .info-icon {
-        border-color: #094372;
-        color: #094372;
-    }
-
-
-
+    //  .finance-valuation-section
     .finance-valuation-section {
         margin-top: 80px;
-    }
-    
-    .finance-valuation-content {
-        background-color: #F2F5F8;
-        border-radius: 5px;
-        padding: 20px 30px;
-    }
-    
-    .single-valuation-item h4 {
-        font-size: 22px;
-        color: #094372;
-        text-transform: uppercase;
-        font-weight: 500;
-        margin: 0 0 12px;
-    }
-
-
-    .single-valuation-item.val-title {
-        width: 390px;
-    }
-    
-    .single-valuation-item.val-input {
-        width: 390px;
-    }
-    
-    .single-valuation-item.val-btn {
-        width: 270px;
-        /* background: green; */
-    }
-    
-    .finance-valuation-fields {
-        border-bottom: 1px solid #BFC1C3;
-        padding-bottom: 25px;
-        margin-bottom: 25px;
-    }
-    
-    .singel-val-input input[type=text] {
-        width: 100%;
-        background: #094372;
-        color: #fff;
-        text-align: center;
-        text-transform: uppercase;
-        font-weight: 600;
-        padding: 13px 15px;
-        height: 45px;
-    }
-    
-    .singel-val-input {
-        text-align: center;
-        ::placeholder {
-            color: #fff;
-            opacity: 1; 
-        }
-        :-ms-input-placeholder {
-            color: #fff;
-        }
-        ::-ms-input-placeholder {
-            color: #fff;
+        .finance-valuation-content {
+            background-color: #F2F5F8;
+            border-radius: 5px;
+            padding: 20px 30px;
+            .finance-valuation-fields {
+                border-bottom: 1px solid #BFC1C3;
+                padding-bottom: 25px;
+                margin-bottom: 25px;
+            }
+            .single-valuation-item {
+                h4 {
+                    font-size: 22px;
+                    color: #094372;
+                    text-transform: uppercase;
+                    font-weight: 500;
+                    margin: 0 0 12px;
+                }
+                &.val-title {
+                    width: 390px;
+                }
+                &.val-input {
+                    width: 390px;
+                }
+                &.val-btn {
+                    width: 270px;
+                }
+                .singel-val-input {
+                    text-align: center;
+                    ::placeholder {
+                        color: #fff;
+                        opacity: 1; 
+                    }
+                    :-ms-input-placeholder {
+                        color: #fff;
+                    }
+                    ::-ms-input-placeholder {
+                        color: #fff;
+                    }
+                    label {
+                        color: #000000;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                    }
+                    input[type=text] {
+                        width: 100%;
+                        background: #094372;
+                        color: #fff;
+                        text-align: center;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                        padding: 13px 15px;
+                        height: 45px;
+                    }
+                }
+            }
         }
     }
-    
-    .singel-val-input label {
-        color: #000000;
-        text-transform: uppercase;
-        font-weight: 600;
-    }
-    
-    .finance-valuation-text {
-        color: #707070;
-    }
-    
-    .finance-valuation-text h6 {
-        color: #000;
-        margin-bottom: 8px;
-    }
-    
-    .finance-valuation-text a {
-        color: #094372;
-        transition: .5s;
-    }
-    
-    .finance-valuation-text a:hover {
-        color: #E86E1C;
-    }
-
-
-    
 }
